baseline alignment of content

--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -34,6 +34,12 @@
     grid-area: navbar;
   }
 
+  .l-header-toolbar {
+    display: flex;
+    flex: 0 0 auto;
+    justify-content: space-between;
+  }
+
   // Navigation panel/drawer
   .l-navigation {
     bottom: 0;
