--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -33,10 +33,10 @@
   </div>
 
   <div class="l-main">
-    <div class="u-fixed-width">
+    <div class="u-fixed-width u-sv-2">
       <div class="l-main__header">
         <h4 class="u-no-margin--bottom">8 models: 3 blocked, 2 alerts, 3 running</h4>
-        <div>
+        <div class="l-header-toolbar">
           <button class="u-no-margin--bottom js-aside-toggle">Toggle aside</button>
           <button class="u-no-margin--bottom js-overlay-toggle">Toggle overlay</button>
         </div>
@@ -280,7 +280,7 @@
   </div>
 
   <div class="l-overlay">
-    <div class="u-fixed-width">
+    <div class="u-fixed-width u-sv-2">
       <div class="l-overlay__header">
         <h4 class="u-no-margin--bottom">Overlay panel</h4>
         <button class="p-button--base js-overlay-close u-no-margin--bottom"><i class="p-icon--close"></i></button>
@@ -296,10 +296,10 @@
   </div>
 
   <div class="l-aside u-hide">
-    <div class="u-fixed-width">
+    <div class="u-fixed-width u-sv-2">
       <div class="l-aside__header">
-        <h4>Right aside panel</h4>
-        <button class="p-button--base js-aside-close"><i class="p-icon--close"></i></button>
+        <h4 class="u-no-margin--bottom">Right aside panel</h4>
+        <button class="u-no-margin--bottom p-button--base js-aside-close"><i class="p-icon--close"></i></button>
       </div>
     </div>
     <div class="l-aside__content">
