--- a/scss/_layouts_application.scss
+++ b/scss/_layouts_application.scss
@@ -27,7 +27,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 102; // consistent with side-navigation component, above global nav
+    z-index: 103; // consistent with side-navigation component, above global nav
 
     @media (min-width: $breakpoint-x-small) {
       width: auto;
@@ -105,6 +105,7 @@
 
   .l-status {
     grid-area: status;
+    z-index: 102;
   }
 
   .l-aside {
