Fix broken URLs in demo content

--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -58,7 +58,7 @@
             <tbody>
               <tr role="row" data-test-model-uuid="2f995dee-392e-4459-8eb9-839c501590af">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/gomboli@external/hadoopspark">hadoopspark</a></div>
+                  <div><a href="#/models/gomboli@external/hadoopspark">hadoopspark</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
@@ -81,7 +81,7 @@
               </tr>
               <tr role="row" data-test-model-uuid="d291b9ed-1e66-4023-84fe-57130e17a0b2">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/gomboli@external/mymodel4">mymodel4</a></div>
+                  <div><a href="#/models/gomboli@external/mymodel4">mymodel4</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
@@ -104,7 +104,7 @@
               </tr>
               <tr role="row" data-test-model-uuid="5f612488-b60b-4256-814a-ba1abaa7db23">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/gomboli@external/testing">testing</a></div>
+                  <div><a href="#/models/gomboli@external/testing">testing</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
@@ -142,7 +142,7 @@
             <tbody>
               <tr role="row" data-test-model-uuid="e1e81a64-3385-4779-8643-05e3d5ed4523">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/gomboli@external/canonical-kubernetes">canonical-kubernetes</a></div>
+                  <div><a href="#/models/gomboli@external/canonical-kubernetes">canonical-kubernetes</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
@@ -165,7 +165,7 @@
               </tr>
               <tr role="row" data-test-model-uuid="7ffe956a-06ac-4ae9-8aac-04eba4a93da5">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/gomboli@external/mymodel">mymodel</a></div>
+                  <div><a href="#/models/gomboli@external/mymodel">mymodel</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
@@ -203,7 +203,7 @@
             <tbody>
               <tr role="row" data-test-model-uuid="57650e3c-815f-4540-89df-81fd5d70b7ef">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/hatch@external/group-test">group-test</a></div>
+                  <div><a href="#/models/hatch@external/group-test">group-test</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
@@ -226,7 +226,7 @@
               </tr>
               <tr role="row" data-test-model-uuid="e6782960-fb0b-460e-82a1-64ee03f9a39b">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/hatch@external/new-search-aggregate">new-search-aggregate</a></div>
+                  <div><a href="#/models/hatch@external/new-search-aggregate">new-search-aggregate</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
@@ -249,7 +249,7 @@
               </tr>
               <tr role="row" data-test-model-uuid="930f4bb0-070a-462a-8d4e-19d9772c08f2">
                 <td role="gridcell" class="" data-test-column="name">
-                  <div><a href="/models/hatch@external/unplaced">unplaced</a></div>
+                  <div><a href="#/models/hatch@external/unplaced">unplaced</a></div>
                 </td>
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
