--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -337,8 +337,8 @@
   });
 
   document.querySelector(".js-menu-pin").addEventListener("click", function() {
-    document.querySelector(".l-application").classList.toggle("has-pinned-navigation");
-    if (document.querySelector(".l-application").classList.contains("has-pinned-navigation")) {
+    document.querySelector(".l-navigation").classList.toggle("is-pinned");
+    if (document.querySelector(".l-navigation").classList.contains("is-pinned")) {
       document.querySelector(".js-menu-pin").querySelector('i').classList.remove('p-icon--pin');
     } else {
       document.querySelector(".js-menu-pin").querySelector('i').classList.add('p-icon--pin');
