Fix broken icons in JAAS demo HTML

--- a/templates/docs/examples/layouts/application.html
+++ b/templates/docs/examples/layouts/application.html
@@ -63,13 +63,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>11</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>11</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>6</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>6</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -86,13 +86,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>7</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>7</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>11</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>11</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>11</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>11</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -109,13 +109,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>2</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>2</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>2</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>2</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>4</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>4</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -147,13 +147,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>6</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>6</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -170,13 +170,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>6</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>6</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>10</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -208,13 +208,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>9</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>9</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -231,13 +231,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>2</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>2</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -254,13 +254,13 @@
                 <td role="gridcell" class="u-overflow--visible" data-test-column="summary">
                   <div class="u-flex">
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/apps-icon.a62950aa.svg" alt="" class="p-icon"><span>5</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>5</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Applications</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/units-icon.271ea6ce.svg" alt="" class="p-icon"><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Units</span>
                     </div>
                     <div class="u-flex--block p-tooltip--top-center" aria-describedby="tp-cntr">
-                      <div class="has-icon"><img src="/static/media/machines-icon.fe4dad8b.svg" alt="" class="p-icon"><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
+                      <div class="has-icon"><i class="p-icon--information"></i><span>0</span></div><span class="p-tooltip__message" role="tooltip" id="tp-cntr">Machines</span>
                     </div>
                   </div>
                 </td>
@@ -299,6 +299,68 @@
 
   .p-icon--pin {
     background: url("https://assets.ubuntu.com/v1/5cca09bb-pin.svg");
+  }
+
+  /* demo JAAS CSS */
+  .u-flex {
+    display: flex
+  }
+
+  .u-flex--block {
+      flex: 1 1 auto
+  }
+
+  .has-icon [class*="p-icon"]:first-child {
+      margin-right: .25rem;
+      margin-top: .25rem
+  }
+
+  .status-icon {
+      display: inline-block;
+      padding-left: 1.5rem;
+      position: relative
+  }
+
+  .status-icon:before {
+      content: "\00B7";
+      font-size: 5rem;
+      left: 0;
+      position: absolute;
+      top: -6px
+  }
+
+  .status-icon.is-blocked:before,.status-icon.is-down:before,.status-icon.is-error:before,.status-icon.is-provisioning:before {
+      color: #c7162b
+  }
+
+  .status-icon.is-alert:before,.status-icon.is-attention:before,.status-icon.is-maintenance:before,.status-icon.is-pending:before,.status-icon.is-stopped:before,.status-icon.is-waiting:before {
+      color: #f99b11
+  }
+
+  .status-icon.is-active:before,.status-icon.is-running:before,.status-icon.is-started:before {
+      color: #cdcdcd
+  }
+
+  .status-icon.is-unknown:before {
+      border: 1px solid #cdcdcd;
+      border-radius: 50%;
+      content: "";
+      height: .6rem;
+      left: .35rem;
+      top: .5rem;
+      width: .6rem
+  }
+
+  table {
+      min-width: 900px
+  }
+
+  table thead:after {
+      content: none
+  }
+
+  td,th {
+      min-width: 150px
   }
 </style>
 
