--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -48,6 +48,7 @@
   @include vf-p-strip-bordered;
   @include vf-p-strip-shallow;
   @include vf-p-strip-deep;
+  @include vf-p-strip-suru;
 }
 
 @mixin vf-p-strip-default {
@@ -112,5 +113,83 @@
 @mixin vf-p-strip-deep {
   [class*='p-strip'].is-deep {
     @extend %section-padding--deep;
+  }
+}
+
+@mixin vf-p-strip-suru {
+  .p-strip--suru {
+    @extend %vf-strip;
+    background-blend-mode: multiply, multiply, normal, normal, normal;
+    background-image:
+      linear-gradient(
+        to bottom right,
+        rgba(205, 205, 205, 0.55) 0%,
+        rgba(205, 205, 205, 0.55) 49.8%,
+        transparent 50.0%,
+        transparent 100%
+      ),
+      linear-gradient(
+        to bottom left,
+        rgba(205, 205, 205, 0.55) 0%,
+        rgba(205, 205, 205, 0.55) 49.8%,
+        transparent 50.0%,
+        transparent 100%
+      ),
+      linear-gradient(
+        to top right,
+        #ffffff 0%,
+        #ffffff 49%,
+        transparent 50%,
+        transparent 100%
+      ),
+      linear-gradient(
+        #ffffff 0%,
+        #ffffff 100%
+      ),
+      linear-gradient(
+        111deg,
+        #4e4e4e 10%,
+        #333333 37%,
+        #111111 100%
+      );
+    background-position: 0% 0%, top right, right 0 bottom 4rem, right bottom,
+    0% 0%;
+    background-repeat: no-repeat;
+    background-size: 100% calc(100% - 4rem), 50% 100%, 100% 4rem, 100% 4rem,
+    auto;
+    margin-bottom: -4rem;
+    overflow: hidden;
+    padding-bottom: 12rem !important;
+    position: relative;
+
+    &.is-light {
+      color: $color-x-dark;
+    }
+
+    &.is-dark {
+      color: $color-x-light;
+    }
+
+    &.is-deep {
+      $padding: 3rem;
+
+      background-position: 0% 0%, top right, right 0 bottom $padding,
+        right bottom, 0% 0%;
+      background-size: 100% calc(100% - #{$padding}), 100% 100%, 100% $padding,
+        100% $padding, auto;
+      margin-bottom: -$padding;
+      padding-bottom: ($padding * 3) !important;
+
+      @media (min-width: $breakpoint-medium) {
+        $padding: 6rem;
+
+        background-position: 0% 0%, top right, right 0 bottom $padding,
+          right bottom, 0% 0%;
+        background-size: 100% calc(100% - #{$padding}), 50% 100%, 100% $padding,
+          100% $padding, auto;
+        margin-bottom: -$padding;
+        padding-bottom: ($padding * 3) !important;
+      }
+    }
   }
 }
