--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -157,6 +157,40 @@
         $color-suru-middle 37%,
         $color-suru-end 100%
       );
+      @supports not (background-blend-mode: multiply) {
+        background-image: linear-gradient(
+            to bottom right,
+            rgba(205, 205, 205, 0.14) 0%,
+            rgba(205, 205, 205, 0.14) 49.8%,
+            transparent 50%,
+            transparent 100%
+          ),
+          linear-gradient(
+            to bottom left,
+            rgba(205, 205, 205, 0.14) 0%,
+            rgba(205, 205, 205, 0.14) 49.8%,
+            transparent 50%,
+            transparent 100%
+          ),
+          linear-gradient(
+            to top right,
+            #ffffff 0%,
+            #ffffff 49%,
+            rgba(255, 255, 255, 0) 50%,
+            rgba(255, 255, 255, 0) 100%
+          ),
+          linear-gradient(
+            to top right,
+            #ffffff 0%,
+            #ffffff 100%
+          ),
+          linear-gradient(
+            111deg,
+            $color-suru-start 10%,
+            $color-suru-middle 37%,
+            $color-suru-end 100%
+          );
+      }
     background-position: 0% 0%, top right, right 0 bottom 4rem, right bottom,
     0% 0%;
     background-repeat: no-repeat;
