--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -49,6 +49,7 @@
   @include vf-p-strip-shallow;
   @include vf-p-strip-deep;
   @include vf-p-strip-suru;
+  @include vf-p-strip-suru-topped;
 }
 
 @mixin vf-p-strip-default {
@@ -116,14 +117,14 @@
   }
 }
 
+$brand-color: #333333;
+$color-suru-start: lighten($brand-color, 10%);
+$color-suru-middle: $brand-color;
+$color-suru-end: darken($brand-color, 10%);
+
 @mixin vf-p-strip-suru {
   .p-strip--suru {
     @extend %vf-strip;
-    $brand-color: #333333;
-    $color-suru-start: lighten($brand-color, 10%);
-    $color-suru-middle: $brand-color;
-    $color-suru-end: darken($brand-color, 10%);
-
     background-blend-mode: multiply, multiply, normal, normal, normal;
     background-image:
       linear-gradient(
@@ -230,5 +231,45 @@
         padding-bottom: ($padding * 3) !important;
       }
     }
+  }
+}
+
+@mixin vf-p-strip-suru-topped {
+  .p-strip--suru-topped {
+    @extend %vf-strip;
+    background-blend-mode: multiply, multiply, normal, normal;
+    background-image:
+      linear-gradient(
+        to bottom left,
+        rgba(229, 229, 229, 0.5) 0%,
+        rgba(229, 229, 229, 0.5) 49%,
+        transparent 50%,
+        transparent 100%
+      ),
+      linear-gradient(
+        to bottom left,
+        rgba(205, 205, 205, 0.16) 0%,
+        rgba(205, 205, 205, 0.16) 49%,
+        transparent 50%,
+        transparent 100%
+      ),
+      linear-gradient(
+        to bottom right,
+        transparent 0%,
+        transparent 49%,
+        rgba(255, 255, 255, 1) 50%,
+        rgba(255, 255, 255, 1) 100%
+      ),
+      linear-gradient(
+        -75deg,
+        $color-suru-start 2%,
+        $color-suru-middle 28%,
+        $color-suru-end 89%
+    );
+    background-position: top right, top right, top left, top left;
+    background-repeat: no-repeat;
+    background-size: 39.4% 6rem, 54% 4rem, 63% 4rem, 62.6% 4rem;
+    padding-bottom: 4rem;
+    padding-top: 6rem;
   }
 }
