Add supports background-blend-mode query

--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -158,39 +158,40 @@ $color-suru-end: darken($brand-color, 10%);
         $color-suru-middle 37%,
         $color-suru-end 100%
       );
-      @supports not (background-blend-mode: multiply) {
-        background-image: linear-gradient(
-            to bottom right,
-            rgba(205, 205, 205, 0.14) 0%,
-            rgba(205, 205, 205, 0.14) 49.8%,
-            transparent 50%,
-            transparent 100%
-          ),
-          linear-gradient(
-            to bottom left,
-            rgba(205, 205, 205, 0.14) 0%,
-            rgba(205, 205, 205, 0.14) 49.8%,
-            transparent 50%,
-            transparent 100%
-          ),
-          linear-gradient(
-            to top right,
-            #ffffff 0%,
-            #ffffff 49%,
-            rgba(255, 255, 255, 0) 50%,
-            rgba(255, 255, 255, 0) 100%
-          ),
-          linear-gradient(
-            to top right,
-            #ffffff 0%,
-            #ffffff 100%
-          ),
-          linear-gradient(
-            111deg,
-            $color-suru-start 10%,
-            $color-suru-middle 37%,
-            $color-suru-end 100%
-          );
+    @supports not (background-blend-mode: multiply) {
+      background-image:
+        linear-gradient(
+          to bottom right,
+          rgba(205, 205, 205, 0.14) 0%,
+          rgba(205, 205, 205, 0.14) 49.8%,
+          transparent 50%,
+          transparent 100%
+        ),
+        linear-gradient(
+          to bottom left,
+          rgba(205, 205, 205, 0.14) 0%,
+          rgba(205, 205, 205, 0.14) 49.8%,
+          transparent 50%,
+          transparent 100%
+        ),
+        linear-gradient(
+          to top right,
+          #ffffff 0%,
+          #ffffff 49%,
+          rgba(255, 255, 255, 0) 50%,
+          rgba(255, 255, 255, 0) 100%
+        ),
+        linear-gradient(
+          to top right,
+          #ffffff 0%,
+          #ffffff 100%
+        ),
+        linear-gradient(
+          111deg,
+          $color-suru-start 10%,
+          $color-suru-middle 37%,
+          $color-suru-end 100%
+        );
       }
     background-position: 0% 0%, top right, right 0 bottom 4rem, right bottom,
     0% 0%;
@@ -266,6 +267,36 @@ $color-suru-end: darken($brand-color, 10%);
         $color-suru-middle 28%,
         $color-suru-end 89%
     );
+    @supports not (background-blend-mode: multiply) {
+      background-image:
+        linear-gradient(
+          to bottom left,
+          rgba(229, 229, 229, 0.14) 0%,
+          rgba(229, 229, 229, 0.14) 49%,
+          transparent 50%,
+          transparent 100%
+        ),
+        linear-gradient(
+          to bottom left,
+          rgba(205, 205, 205, 0.14) 0%,
+          rgba(205, 205, 205, 0.14) 49%,
+          transparent 50%,
+          transparent 100%
+        ),
+        linear-gradient(
+          to bottom right,
+          transparent 0%,
+          transparent 49%,
+          rgba(255, 255, 255, 1) 50%,
+          rgba(255, 255, 255, 1) 100%
+        ),
+        linear-gradient(
+          -75deg,
+          $color-suru-start 2%,
+          $color-suru-middle 28%,
+          $color-suru-end 89%
+        );
+    }
     background-position: top right, top right, top left, top left;
     background-repeat: no-repeat;
     background-size: 39.4% 6rem, 54% 4rem, 63% 4rem, 62.6% 4rem;
