Add default markers to suru variables; add suru strips to documentation

--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -117,10 +117,10 @@
   }
 }
 
-$brand-color: #333333;
-$color-suru-start: lighten($brand-color, 10%);
-$color-suru-middle: $brand-color;
-$color-suru-end: darken($brand-color, 10%);
+$brand-color: #333333 !default;
+$color-suru-start: lighten($brand-color, 10%) !default;
+$color-suru-middle: $brand-color !default;
+$color-suru-end: darken($brand-color, 10%) !default;
 
 @mixin vf-p-strip-suru {
   .p-strip--suru {
