--- a/scss/_patterns_matrix.scss
+++ b/scss/_patterns_matrix.scss
@@ -88,13 +88,14 @@
 
   .p-matrix__img {
     align-self: flex-start;
+    flex-shrink: 0;
     height: auto;
     margin-bottom: $spv-inner--small;
     margin-right: $matrix-img-gutter;
     width: $matrix-img-width;
 
     @media (max-width: $breakpoint-heading-threshold) {
-      margin-top: #{map-get($nudges, nudge--h4-mobile)};
+      margin-top: 0;
     }
 
     @media (min-width: $breakpoint-heading-threshold) {
