Add is-shallow option to p-strip--suru class

--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -200,7 +200,7 @@ $color-suru-end: darken($brand-color, 10%) !default;
     auto;
     margin-bottom: -4rem;
     overflow: hidden;
-    padding-bottom: 12rem !important;
+    padding-bottom: 12rem;
     position: relative;
 
     &.is-light {
@@ -231,6 +231,10 @@ $color-suru-end: darken($brand-color, 10%) !default;
         margin-bottom: -$padding;
         padding-bottom: ($padding * 3) !important;
       }
+    }
+
+    &.is-shallow {
+      padding: 2rem 0rem 6rem 0rem;     
     }
   }
 }
