Replace new brand-color variable with the existing color-brand variable

--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -117,10 +117,9 @@
   }
 }
 
-$brand-color: #333333 !default;
-$color-suru-start: lighten($brand-color, 10%) !default;
-$color-suru-middle: $brand-color !default;
-$color-suru-end: darken($brand-color, 10%) !default;
+$color-suru-start: lighten($color-brand, 10%) !default;
+$color-suru-middle: $color-brand !default;
+$color-suru-end: darken($color-brand, 10%) !default;
 
 @mixin vf-p-strip-suru {
   .p-strip--suru {
