improve truncation and ellipsis

--- a/templates/docs/examples/patterns/chip/multiple.html
+++ b/templates/docs/examples/patterns/chip/multiple.html
@@ -4,38 +4,9 @@
 {% block standalone_css %}patterns_chip{% endblock %}
 
 {% block content %}
-<div class="p-chip is-selected">
-  <span class="p-chip__lead">Owner:</span>
-  <span class="p-chip__value">Anna</span>
-  <button class="p-chip__dismiss">
-    <i class="p-icon--close">Dismiss</i>
-  </button>
-</div>
-<div class="p-chip">
-  <span class="p-chip__lead">Country:</span>
-  <span class="p-chip__value">England</span>
-  <button class="p-chip__dismiss">
-    <i class="p-icon--close">Dismiss</i>
-  </button>
-</div>
-<div class="p-chip">
-  <span class="p-chip__lead">Age:</span>
-  <span class="p-chip__value">&gt; 30</span>
-  <button class="p-chip__dismiss">
-    <i class="p-icon--close">Dismiss</i>
-  </button>
-</div>
-<div class="p-chip">
-  <span class="p-chip__lead">Height:</span>
-  <span class="p-chip__value">&gt; 153 cm</span>
-  <button class="p-chip__dismiss">
-    <i class="p-icon--close">Dismiss</i>
-  </button>
-</div>
-<div class="p-chip">
-  Active
-  <button class="p-chip__dismiss">
-    <i class="p-icon--close">Dismiss</i>
-  </button>
-</div>
+
+<div class="p-chip">AWS</div>
+<div class="p-chip">Azure</div>
+<div class="p-chip">Google cloud platform</div>
+
 {% endblock %}
