--- a/scss/_patterns_chip.scss
+++ b/scss/_patterns_chip.scss
@@ -1,22 +1,21 @@
 @import 'settings';
 
 @mixin vf-p-chip {
-  $chip-line-height: map-get($line-heights, default-text);
+  $chip-line-height: 1rem;
 
   .p-chip {
     @extend %small-text;
 
     background-color: rgba($color-x-dark, 0.05);
-    border-radius: $chip-line-height * 0.5;
-    display: inline-block;
+    border-radius: $chip-line-height;
+    display: inline-flex;
     line-height: $chip-line-height;
     margin: map-get($nudges, nudge--p) $sph-inner--small 0 0;
     max-width: 100%;
-    overflow: hidden;
+    padding-bottom: 0.25rem;
     padding-left: $sph-inner;
     padding-right: $sph-inner;
-    padding-top: 0;
-    text-overflow: ellipsis;
+    padding-top: 0.25rem;
     user-select: none;
     white-space: nowrap;
 
@@ -36,22 +35,38 @@
       background-color: rgba($color-x-dark, 0.15);
     }
 
-    .p-chip__lead {
+    &__lead,
+    &__value {
+      margin-bottom: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    &__lead {
+      $space-between-lead-and-value: 0.25rem;
       @extend %x-small-text;
 
-      display: inline;
       line-height: $chip-line-height;
+      padding-right: $space-between-lead-and-value * 2;
+      padding-top: 0.1rem;
+      position: relative;
       text-transform: uppercase;
+
+      &::after {
+        content: '\00a0:';
+        position: absolute;
+        right: $space-between-lead-and-value;
+      }
     }
 
-    .p-chip__value {
+    &__value {
       @extend %small-text;
 
-      display: inline;
       line-height: $chip-line-height;
+      padding-top: 0.05rem;
     }
 
-    .p-chip__dismiss {
+    &__dismiss {
       @include vf-button-pattern(
         $button-background-color: transparent,
         $button-border-color: transparent,
@@ -59,7 +74,9 @@
         $button-hover-border-color: transparent
       );
 
-      display: inline;
+      border: none;
+      display: block;
+      flex: 0 0 auto;
       left: $sp-unit * 0.5;
       line-height: 1rem;
       margin-bottom: 0;
@@ -70,6 +87,10 @@
 
       @media only screen and (max-width: $breakpoint-x-small) {
         width: auto;
+      }
+
+      [class*='p-icon'] {
+        vertical-align: calc(#{0.5 * $cap-height} - #{0.5 * $default-icon-size});
       }
     }
   }
