--- a/templates/docs/examples/patterns/chip/long-values.html
+++ b/templates/docs/examples/patterns/chip/long-values.html
@@ -4,10 +4,52 @@
 {% block standalone_css %}patterns_chip{% endblock %}
 
 {% block content %}
-<div class="p-chip">
-  <span class="p-chip__lead">Archtecture of the system</span>: ARM
+<div class="p-chip is-selected">
+  <span class="p-chip__lead">Short lead</span>
+  <span class="p-chip__value">Short value</span>
+  <button class="p-chip__dismiss">
+    <i class="p-icon--close">Dismiss</i>
+  </button>
 </div>
 <div class="p-chip">
-  <span class="p-chip__lead">UUID</span>: 0111111111111111111111111111111111111111111111111111111111111111
+  <span class="p-chip__value">
+    Short value only
+  </span>
 </div>
+<div class="p-chip">
+  <span class="p-chip__value">
+    Short value + dismiss button
+  </span>
+  <button class="p-chip__dismiss">
+    <i class="p-icon--close">Dismiss</i>
+  </button>
+</div>
+<div class="p-chip">
+  <span class="p-chip__value">
+    A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead A very long value, no lead
+  </span>
+</div>
+<div class="p-chip">
+  <span class="p-chip__lead">
+    Very long lead, short value Very long lead, short value Very long lead, short value Very long lead, short value Very long lead, short value Very long lead, short valueVery long lead, short value Very long lead, short value Very long lead, short value Very long lead, short value Very long lead, short value Very long lead, short value
+  </span>
+  <span class="p-chip__value">
+    Short value
+  </span>
+  <button class="p-chip__dismiss">
+    <i class="p-icon--close">Dismiss</i>
+  </button>
+</div>
+<div class="p-chip">
+  <span class="p-chip__lead">
+    A very long lead A very long lead A very long lead A very long lead A very long lead
+  </span>
+  <span class="p-chip__value">
+    An even longer value An even longer value An even longer value An even longer value An even longer value An even longer value An even longer value An even longer value
+  </span>
+  <button class="p-chip__dismiss">
+    <i class="p-icon--close">Dismiss</i>
+  </button>
+</div>
+
 {% endblock %}
