--- a/templates/docs/examples/patterns/chip/without-dismiss.html
+++ b/templates/docs/examples/patterns/chip/without-dismiss.html
@@ -5,6 +5,9 @@
 
 {% block content %}
 <div class="p-chip">
-  <span class="p-chip__lead">Owner</span>: Bob
+  <span class="p-chip__lead">Owner</span>
+  <span class="p-chip__value">
+    Bob
+  </span>
 </div>
 {% endblock %}
