Reformat code using prettier

--- a/scss/_patterns_strip.scss
+++ b/scss/_patterns_strip.scss
@@ -126,78 +126,20 @@ $color-suru-end: darken($color-brand, 10%) !default;
     @extend %vf-strip;
 
     background-blend-mode: multiply, multiply, normal, normal, normal;
-    background-image:
-      linear-gradient(
-        to bottom right,
-        rgba(205, 205, 205, 0.55) 0%,
-        rgba(205, 205, 205, 0.55) 49.8%,
-        transparent 50.0%,
-        transparent 100%
-      ),
-      linear-gradient(
-        to bottom left,
-        rgba(205, 205, 205, 0.55) 0%,
-        rgba(205, 205, 205, 0.55) 49.8%,
-        transparent 50.0%,
-        transparent 100%
-      ),
-      linear-gradient(
-        to top right,
-        #ffffff 0%,
-        #ffffff 49%,
-        transparent 50%,
-        transparent 100%
-      ),
-      linear-gradient(
-        #ffffff 0%,
-        #ffffff 100%
-      ),
-      linear-gradient(
-        111deg,
-        $color-suru-start 10%,
-        $color-suru-middle 37%,
-        $color-suru-end 100%
-      );
+    background-image: linear-gradient(to bottom right, rgba(205, 205, 205, 0.55) 0%, rgba(205, 205, 205, 0.55) 49.8%, transparent 50%, transparent 100%),
+      linear-gradient(to bottom left, rgba(205, 205, 205, 0.55) 0%, rgba(205, 205, 205, 0.55) 49.8%, transparent 50%, transparent 100%),
+      linear-gradient(to top right, #fff 0%, #fff 49%, transparent 50%, transparent 100%), linear-gradient(#fff 0%, #fff 100%),
+      linear-gradient(111deg, $color-suru-start 10%, $color-suru-middle 37%, $color-suru-end 100%);
     @supports not (background-blend-mode: multiply) {
-      background-image:
-        linear-gradient(
-          to bottom right,
-          rgba(205, 205, 205, 0.14) 0%,
-          rgba(205, 205, 205, 0.14) 49.8%,
-          transparent 50%,
-          transparent 100%
-        ),
-        linear-gradient(
-          to bottom left,
-          rgba(205, 205, 205, 0.14) 0%,
-          rgba(205, 205, 205, 0.14) 49.8%,
-          transparent 50%,
-          transparent 100%
-        ),
-        linear-gradient(
-          to top right,
-          #ffffff 0%,
-          #ffffff 49%,
-          rgba(255, 255, 255, 0) 50%,
-          rgba(255, 255, 255, 0) 100%
-        ),
-        linear-gradient(
-          to top right,
-          #ffffff 0%,
-          #ffffff 100%
-        ),
-        linear-gradient(
-          111deg,
-          $color-suru-start 10%,
-          $color-suru-middle 37%,
-          $color-suru-end 100%
-        );
-      }
-    background-position: 0% 0%, top right, right 0 bottom 4rem, right bottom,
-    0% 0%;
+      background-image: linear-gradient(to bottom right, rgba(205, 205, 205, 0.14) 0%, rgba(205, 205, 205, 0.14) 49.8%, transparent 50%, transparent 100%),
+        linear-gradient(to bottom left, rgba(205, 205, 205, 0.14) 0%, rgba(205, 205, 205, 0.14) 49.8%, transparent 50%, transparent 100%),
+        linear-gradient(to top right, #fff 0%, #fff 49%, transparent 50%, transparent 100%), linear-gradient(to top right, #fff 0%, #fff 100%),
+        linear-gradient(111deg, $color-suru-start 10%, $color-suru-middle 37%, $color-suru-end 100%);
+    }
+
+    background-position: 0% 0%, top right, right 0 bottom 4rem, right bottom, 0% 0%;
     background-repeat: no-repeat;
-    background-size: 100% calc(100% - 4rem), 50% 100%, 100% 4rem, 100% 4rem,
-    auto;
+    background-size: 100% calc(100% - 4rem), 50% 100%, 100% 4rem, 100% 4rem, auto;
     margin-bottom: -4rem;
     overflow: hidden;
     padding-bottom: 12rem;
@@ -214,27 +156,23 @@ $color-suru-end: darken($color-brand, 10%) !default;
     &.is-deep {
       $padding: 3rem;
 
-      background-position: 0% 0%, top right, right 0 bottom $padding,
-        right bottom, 0% 0%;
-      background-size: 100% calc(100% - #{$padding}), 100% 100%, 100% $padding,
-        100% $padding, auto;
+      background-position: 0% 0%, top right, right 0 bottom $padding, right bottom, 0% 0%;
+      background-size: 100% calc(100% - #{$padding}), 100% 100%, 100% $padding, 100% $padding, auto;
       margin-bottom: -$padding;
       padding-bottom: ($padding * 3) !important;
 
       @media (min-width: $breakpoint-medium) {
         $padding: 6rem;
 
-        background-position: 0% 0%, top right, right 0 bottom $padding,
-          right bottom, 0% 0%;
-        background-size: 100% calc(100% - #{$padding}), 50% 100%, 100% $padding,
-          100% $padding, auto;
+        background-position: 0% 0%, top right, right 0 bottom $padding, right bottom, 0% 0%;
+        background-size: 100% calc(100% - #{$padding}), 50% 100%, 100% $padding, 100% $padding, auto;
         margin-bottom: -$padding;
         padding-bottom: ($padding * 3) !important;
       }
     }
 
     &.is-shallow {
-      padding: 1.5rem 0rem 6rem 0rem;     
+      padding: 1.5rem 0 6rem 0;
     }
   }
 }
@@ -242,66 +180,20 @@ $color-suru-end: darken($color-brand, 10%) !default;
 @mixin vf-p-strip-suru-topped {
   .p-strip--suru-topped {
     @extend %vf-strip;
-    
+
     background-blend-mode: multiply, multiply, normal, normal;
-    background-image:
-      linear-gradient(
-        to bottom left,
-        rgba(229, 229, 229, 0.5) 0%,
-        rgba(229, 229, 229, 0.5) 49%,
-        transparent 50%,
-        transparent 100%
-      ),
-      linear-gradient(
-        to bottom left,
-        rgba(205, 205, 205, 0.16) 0%,
-        rgba(205, 205, 205, 0.16) 49%,
-        transparent 50%,
-        transparent 100%
-      ),
-      linear-gradient(
-        to bottom right,
-        transparent 0%,
-        transparent 49%,
-        rgba(255, 255, 255, 1) 50%,
-        rgba(255, 255, 255, 1) 100%
-      ),
-      linear-gradient(
-        -75deg,
-        $color-suru-start 2%,
-        $color-suru-middle 28%,
-        $color-suru-end 89%
-    );
+    background-image: linear-gradient(to bottom left, rgba(229, 229, 229, 0.5) 0%, rgba(229, 229, 229, 0.5) 49%, transparent 50%, transparent 100%),
+      linear-gradient(to bottom left, rgba(205, 205, 205, 0.16) 0%, rgba(205, 205, 205, 0.16) 49%, transparent 50%, transparent 100%),
+      linear-gradient(to bottom right, transparent 0%, transparent 49%, #fff 50%, #fff 100%),
+      linear-gradient(-75deg, $color-suru-start 2%, $color-suru-middle 28%, $color-suru-end 89%);
+
     @supports not (background-blend-mode: multiply) {
-      background-image:
-        linear-gradient(
-          to bottom left,
-          rgba(229, 229, 229, 0.14) 0%,
-          rgba(229, 229, 229, 0.14) 49%,
-          transparent 50%,
-          transparent 100%
-        ),
-        linear-gradient(
-          to bottom left,
-          rgba(205, 205, 205, 0.14) 0%,
-          rgba(205, 205, 205, 0.14) 49%,
-          transparent 50%,
-          transparent 100%
-        ),
-        linear-gradient(
-          to bottom right,
-          transparent 0%,
-          transparent 49%,
-          rgba(255, 255, 255, 1) 50%,
-          rgba(255, 255, 255, 1) 100%
-        ),
-        linear-gradient(
-          -75deg,
-          $color-suru-start 2%,
-          $color-suru-middle 28%,
-          $color-suru-end 89%
-        );
+      background-image: linear-gradient(to bottom left, rgba(229, 229, 229, 0.14) 0%, rgba(229, 229, 229, 0.14) 49%, transparent 50%, transparent 100%),
+        linear-gradient(to bottom left, rgba(205, 205, 205, 0.14) 0%, rgba(205, 205, 205, 0.14) 49%, transparent 50%, transparent 100%),
+        linear-gradient(to bottom right, transparent 0%, transparent 49%, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 1) 100%),
+        linear-gradient(-75deg, $color-suru-start 2%, $color-suru-middle 28%, $color-suru-end 89%);
     }
+
     background-position: top right, top right, top left, top left;
     background-repeat: no-repeat;
     background-size: 39.4% 6rem, 54% 4rem, 63% 4rem, 62.6% 4rem;
